var _application_2obj_2_debug_2net7_80_2_protos_2_lesson_8cs =
[
    [ "gRPCClient.LessonData", "classg_r_p_c_client_1_1_lesson_data.html", "classg_r_p_c_client_1_1_lesson_data" ],
    [ "gRPCClient.LessonOverview", "classg_r_p_c_client_1_1_lesson_overview.html", "classg_r_p_c_client_1_1_lesson_overview" ],
    [ "gRPCClient.LessonAttendance", "classg_r_p_c_client_1_1_lesson_attendance.html", "classg_r_p_c_client_1_1_lesson_attendance" ],
    [ "gRPCClient.LessonAttended", "classg_r_p_c_client_1_1_lesson_attended.html", "classg_r_p_c_client_1_1_lesson_attended" ],
    [ "gRPCClient.RequestCreateLesson", "classg_r_p_c_client_1_1_request_create_lesson.html", "classg_r_p_c_client_1_1_request_create_lesson" ],
    [ "gRPCClient.ResponseCreateLesson", "classg_r_p_c_client_1_1_response_create_lesson.html", "classg_r_p_c_client_1_1_response_create_lesson" ],
    [ "gRPCClient.RequestMarkAttendance", "classg_r_p_c_client_1_1_request_mark_attendance.html", "classg_r_p_c_client_1_1_request_mark_attendance" ],
    [ "gRPCClient.ResponseMarkAttendance", "classg_r_p_c_client_1_1_response_mark_attendance.html", "classg_r_p_c_client_1_1_response_mark_attendance" ],
    [ "gRPCClient.RequestGetAttendance", "classg_r_p_c_client_1_1_request_get_attendance.html", "classg_r_p_c_client_1_1_request_get_attendance" ],
    [ "gRPCClient.ResponseGetAttendance", "classg_r_p_c_client_1_1_response_get_attendance.html", "classg_r_p_c_client_1_1_response_get_attendance" ],
    [ "gRPCClient.RequestGetLessonsByClassId", "classg_r_p_c_client_1_1_request_get_lessons_by_class_id.html", "classg_r_p_c_client_1_1_request_get_lessons_by_class_id" ],
    [ "gRPCClient.ResponseGetLessonsByClassId", "classg_r_p_c_client_1_1_response_get_lessons_by_class_id.html", "classg_r_p_c_client_1_1_response_get_lessons_by_class_id" ],
    [ "gRPCClient.RequestGetLessonById", "classg_r_p_c_client_1_1_request_get_lesson_by_id.html", "classg_r_p_c_client_1_1_request_get_lesson_by_id" ],
    [ "gRPCClient.ResponseGetLessonById", "classg_r_p_c_client_1_1_response_get_lesson_by_id.html", "classg_r_p_c_client_1_1_response_get_lesson_by_id" ],
    [ "gRPCClient.RequestGetLessonExtendedByHomeworkHandInFeedback", "classg_r_p_c_client_1_1_request_get_lesson_extended_by_homework_hand_in_feedback.html", "classg_r_p_c_client_1_1_request_get_lesson_extended_by_homework_hand_in_feedback" ],
    [ "gRPCClient.RequestDeleteLesson", "classg_r_p_c_client_1_1_request_delete_lesson.html", "classg_r_p_c_client_1_1_request_delete_lesson" ],
    [ "gRPCClient.ResponseDeleteLesson", "classg_r_p_c_client_1_1_response_delete_lesson.html", "classg_r_p_c_client_1_1_response_delete_lesson" ],
    [ "gRPCClient.RequestUpdateLesson", "classg_r_p_c_client_1_1_request_update_lesson.html", "classg_r_p_c_client_1_1_request_update_lesson" ],
    [ "gRPCClient.ResponseUpdateLesson", "classg_r_p_c_client_1_1_response_update_lesson.html", "classg_r_p_c_client_1_1_response_update_lesson" ],
    [ "pb", "_application_2obj_2_debug_2net7_80_2_protos_2_lesson_8cs.html#a3a8b1403f9034aa88aad1ce2c733db60", null ],
    [ "pbc", "_application_2obj_2_debug_2net7_80_2_protos_2_lesson_8cs.html#acf353ca81053b715ef0a189df5a75499", null ],
    [ "pbr", "_application_2obj_2_debug_2net7_80_2_protos_2_lesson_8cs.html#a4c9bca18934bf8b310b9d65812404c69", null ],
    [ "scg", "_application_2obj_2_debug_2net7_80_2_protos_2_lesson_8cs.html#a6de48d7be2d1c733071a3f897657ee05", null ]
];