var searchData=
[
  ['datefieldnumber_0',['datefieldnumber',['../classg_r_p_c_client_1_1_lesson_data.html#afe3e4cdb202f93abcc3d212214356b78',1,'gRPCClient.LessonData.DateFieldNumber'],['../classg_r_p_c_client_1_1_lesson_overview.html#a31f96714d9819e434e5f4fb16cc1ca39',1,'gRPCClient.LessonOverview.DateFieldNumber'],['../classg_r_p_c_client_1_1_lesson_attended.html#addbf65be2bc2e690407e0c35869d71b7',1,'gRPCClient.LessonAttended.DateFieldNumber']]],
  ['deadlinefieldnumber_1',['DeadlineFieldNumber',['../classg_r_p_c_client_1_1_homework.html#a522913be3e1ca6505c8fddb55e389e41',1,'gRPCClient::Homework']]],
  ['descriptionfieldnumber_2',['descriptionfieldnumber',['../classg_r_p_c_client_1_1_homework.html#af4832ede97faec6ca9cde1da84840d22',1,'gRPCClient.Homework.DescriptionFieldNumber'],['../classg_r_p_c_client_1_1_lesson_data.html#aa74cd2069b58731c6e6dc0edc329ef04',1,'gRPCClient.LessonData.DescriptionFieldNumber'],['../classg_r_p_c_client_1_1_lesson_overview.html#a32ffec06392f900207f8c9a9c731fa96',1,'gRPCClient.LessonOverview.DescriptionFieldNumber']]]
];
