var searchData=
[
  ['deleteasync_0',['deleteasync',['../interface_application_1_1_client_interfaces_1_1_i_lesson_client.html#a757c6753bc32aa6a35f200c89f0419da',1,'Application.ClientInterfaces.ILessonClient.DeleteAsync()'],['../class_application_1_1g_r_p_c_clients_1_1_lesson_client.html#ac3ee77bd699b71b4d265ea8ba9ea653b',1,'Application.gRPCClients.LessonClient.DeleteAsync()'],['../class_application_1_1_logic_1_1_lesson_logic.html#ad69df7176f6b964a1dbef5bb97b1ba18',1,'Application.Logic.LessonLogic.DeleteAsync()'],['../interface_application_1_1_logic_interfaces_1_1_i_lesson_logic.html#ab747049131d6ba79267a81455754420f',1,'Application.LogicInterfaces.ILessonLogic.DeleteAsync()'],['../class_web_a_p_i_1_1_controllers_1_1_lessons_controller.html#a081e002a40a7da005bbaccbe55818ba8',1,'WebAPI.Controllers.LessonsController.DeleteAsync()']]],
  ['deletelesson_1',['deletelesson',['../classg_r_p_c_client_1_1_lesson_service_1_1_lesson_service_client.html#a80af2c82e2805c29fd35c22df8a32477',1,'gRPCClient.LessonService.LessonServiceClient.deleteLesson(global::gRPCClient.RequestDeleteLesson request, grpc::Metadata headers=null, global::System.DateTime? deadline=null, global::System.Threading.CancellationToken cancellationToken=default(global::System.Threading.CancellationToken))'],['../classg_r_p_c_client_1_1_lesson_service_1_1_lesson_service_client.html#abbe0ab5caa6a083db5fb7ac5179d60f9',1,'gRPCClient.LessonService.LessonServiceClient.deleteLesson(global::gRPCClient.RequestDeleteLesson request, grpc::CallOptions options)']]],
  ['deletelessonasync_2',['deletelessonasync',['../classg_r_p_c_client_1_1_lesson_service_1_1_lesson_service_client.html#a5526c5cfea2345f1cb6f24ad0cff2d4c',1,'gRPCClient.LessonService.LessonServiceClient.deleteLessonAsync(global::gRPCClient.RequestDeleteLesson request, grpc::Metadata headers=null, global::System.DateTime? deadline=null, global::System.Threading.CancellationToken cancellationToken=default(global::System.Threading.CancellationToken))'],['../classg_r_p_c_client_1_1_lesson_service_1_1_lesson_service_client.html#a9d804e7af1be62150cea6ba0f05b34b8',1,'gRPCClient.LessonService.LessonServiceClient.deleteLessonAsync(global::gRPCClient.RequestDeleteLesson request, grpc::CallOptions options)']]],
  ['deleteuser_3',['deleteuser',['../classg_r_p_c_client_1_1_user_service_1_1_user_service_client.html#ae17503ce102f1b14068cf3d16c988167',1,'gRPCClient.UserService.UserServiceClient.deleteUser(global::gRPCClient.RequestDeleteUser request, grpc::Metadata headers=null, global::System.DateTime? deadline=null, global::System.Threading.CancellationToken cancellationToken=default(global::System.Threading.CancellationToken))'],['../classg_r_p_c_client_1_1_user_service_1_1_user_service_client.html#a59210722ee7fba4862518457bf745f97',1,'gRPCClient.UserService.UserServiceClient.deleteUser(global::gRPCClient.RequestDeleteUser request, grpc::CallOptions options)']]],
  ['deleteuserasync_4',['deleteuserasync',['../classg_r_p_c_client_1_1_user_service_1_1_user_service_client.html#a69254fe10041d9d654ee99b2a1cbf548',1,'gRPCClient.UserService.UserServiceClient.deleteUserAsync(global::gRPCClient.RequestDeleteUser request, grpc::Metadata headers=null, global::System.DateTime? deadline=null, global::System.Threading.CancellationToken cancellationToken=default(global::System.Threading.CancellationToken))'],['../classg_r_p_c_client_1_1_user_service_1_1_user_service_client.html#afc423b9a9424d7cbb95102f6c79ecfb0',1,'gRPCClient.UserService.UserServiceClient.deleteUserAsync(global::gRPCClient.RequestDeleteUser request, grpc::CallOptions options)']]]
];
